# gnonograms

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md  com.github.jeremypw.gnonograms.json  com.github.jeremypw.gnonograms.yml  config.h.meson  io.github.jeremypw.gnonograms.yml  meson.build  meson_options.txt
data/: Application.css  CMakeLists.txt  com.github.jeremypw.gnonograms-elementary.desktop.in.in  com.github.jeremypw.gnonograms-elementary.meson.in.appdata.xml  com.github.jeremypw.gnonograms-elementary.meson.in.desktop  com.github.jeremypw.gnonograms.appdata.xml.in  com.github.jeremypw.gnonograms.desktop.in  com.github.jeremypw.gnonograms.meson.in.appdata.xml  com.github.jeremypw.gnonograms.meson.in.desktop  com.github.jeremypw.gnonograms.mimeinfo.xml  gnonograms-elementary.appdata.xml.in  gnonograms-elementary.meson.in.appdata.xml  gresource.xml  meson.build  post_uninstall.py.in
data/games/: 42.gno  blender.gno
data/icons/: gnonogram-icons.gresource.xml
data/schemas/: CMakeLists.txt  apps.gnonograms-elementary.gschema.xml  com.github.jeremypw.gnonograms-elementary.gschema.xml  com.github.jeremypw.gnonograms.gschema.xml
data/screenshots/: GnonogramsSolvingGame.gno
debian/: changelog  com.github.jeremypw.gnonograms.install  control  copyright  libgnonograms-core0.install  rules
libcore/: AbstractSolver.vala  Constants.vala  Enums.vala  Filereader.vala  Filewriter.vala  History.vala  Model.vala  Move.vala  My2DCellArray.vala  Region.vala  Solver.vala  Structs.vala  utils.vala
libcore/widgets/: AbstractAppSetting.vala  Cellgrid.vala  Clue.vala  Cluebox.vala  GradeChooser.vala  Label.vala  Labelbox.vala  ScaleGrid.vala  SettingSwitch.vala  TitleEntry.vala
meson/: post_install.py
po/: CMakeLists.txt  LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.jeremypw.gnonograms.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+163 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.jeremypw.gnonograms-extra.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+160 more)
src/: AdvancedRandomGameGenerator.vala  Application.vala  Config.vala.in  Controller.vala  Gnonogram_controller.vala  Gnonogram_view.vala  RandomPatternGenerator.vala  SimpleGenerator.vala  SimpleRandomGameGenerator.vala  View.vala  gnonograms.vala
src/HeaderBar/: AppPopover.vala  HeaderButton.vala  ProgressIndicator.vala  RestartButton.vala
src/core/: AbstractGameGenerator.vala  AbstractGenerator.vala  AbstractPatternGenerator.vala  AbstractSolver.vala  Circular_buffer.vala  Constants.vala  Enums.vala  Filereader.vala  Filewriter.vala  Gnonogram_filereader.vala  Gnonogram_filewriter.vala  Gnonogram_model.vala  Gnonogram_permutor.vala  Gnonogram_region.vala  Gnonogram_solver.vala  History.vala  Move.vala  My2DCellArray.vala  Range.vala  Region.vala  Solver.vala  Structs.vala  utils.vala
src/dialogs/: Game_editor.vala  img2gno.vala
src/services/: RandomGameGenerator.vala  RandomPatternGenerator.vala
src/widgets/: AppMenu.vala  DimensionControl.vala  DimensionSpinButton.vala  Gnonogram_cellgrid.vala  Gnonogram_label.vala  Gnonogram_labelbox.vala  GradeChooser.vala  HistoryControl.vala  Label.vala  Labelbox.vala  ProgressIndicator.vala  Progress_indicator.vala  ViewModeButton.vala
vapi/: config.vapi
